# sema-py

./: .gitignore  README.md  gui.py  image.py  main.py  pyproject.toml  repl.py  text.py  utils.py
