[project]
name = "sema-py"
version = "0.1.0"
description = "Local semantic search tool for text files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.2.2",
    "sentence-transformers>=5.1.2",
    "click>=8.3.0",
    "rich>=14.2.0",
    "xxhash>=3.6.0",
    "prompt-toolkit>=3.0.48",
    "pillow>=11.0.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
